# An-lisis_Sentimientos_Python

feelings/: ejemplo de exposicion.ipynb  example.ipynb
sentimind_project/: .dockerignore  DOCUMENTACION.md  docker-compose.dev.yml  docker-compose.yml
sentimind_project/backend/: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.dev  db.sqlite3  entrypoint.sh  manage.py  pyproject.toml  render.yaml  seed_data.py  test_classification.py
sentimind_project/backend/core/: models.py  urls.py
sentimind_project/backend/core/application/: __init__.py  ai_service.py
sentimind_project/backend/core/domain/: __init__.py
sentimind_project/backend/core/infrastructure/: __init__.py  serializers.py  views.py
sentimind_project/backend/core/migrations/: 0001_initial.py  0002_category_rename_category_post_primary_category_and_more.py
sentimind_project/backend/sentimind/: asgi.py  settings.py  urls.py  wsgi.py
sentimind_project/frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json
sentimind_project/frontend/src/: index.css
sentimind_project/frontend/src/adapters/: postAdapter.ts
sentimind_project/frontend/src/components/: FilterBar.tsx  PostCard.tsx  PostInput.tsx
sentimind_project/frontend/src/hooks/: usePosts.ts
sentimind_project/frontend/src/pages/: Home.tsx
sentimind_project/frontend/src/utils/: constants.ts
